# tree-sitter-mdn

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  release-please-config.json  setup.py  tree-sitter.json
.github/: CODEOWNERS  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml  release-please.yml  test.yml
bindings/c/: tree-sitter-mdn.pc.in
bindings/c/tree_sitter/: tree-sitter-mdn.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mdn/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMDNTests/: TreeSitterMDNTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
