[package]
name = "tree-sitter-mdn"
description = "Parser for MDN content"
version = "0.1.5"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mdn"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mdn/tree-sitter-mdn"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2.47"

[dev-dependencies]
tree-sitter = "0.25"
